<?xml version="1.0"?>
<package format="2">
  <name>mock_hardware</name>
  <version>4.3.0</version>
  <description>ros2_control hardware interface</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stoglrobotics.de">Denis Štogl</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>rcpputils</depend>
  <depend>transmission_interface</depend>

  <build_depend>rcutils</build_depend>
  <exec_depend>rcutils</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
